--- a/ShoppingCart/Assets/stylesheet.css
+++ b/ShoppingCart/Assets/stylesheet.css
@@ -8,3 +8,29 @@ padding-top: 20px;
     font-size: 25px;
     font-style: italic;
 }
+.errorMessages
+{
+    color:#FF0000;
+}
+.formLS
+{
+    padding: 20px 60px;
+    background: #B6E0FF;
+    color: #555;
+    display: inline-block;
+    border-radius: 4px;
+}
+.textBox
+{
+    padding: 8px;width: 200px;
+    border: #A3C3E7 1px solid;
+    border-radius: 4px;
+}
+.positionTB
+{
+    margin:15px 0px;
+}
+.container
+{
+    padding:15px;
+}
